--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        gradle.projectsEvaluated {
+            tasks.withType(JavaCompile) {
+                options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+            }
+        }
     }
 }
 
